<resources>
    <string name="app_name">Platforma Testów IBE</string>
    <string name="log_dir">Test_Platform_Logs</string>
    <string name="set_menu">Settings</string>
    <string name="pup_menu">Examinees</string>
    <string name="sch_menu">Institutions</string>
    <string name="car_menu">Researchers</string>
    <string name="in_menu">Logging in</string>
    <string name="und_menu">Undo</string>
    <string name="add_menu">Add</string>
    <string name="del_menu">Delete</string>
    <string name="exp_menu">Export</string>
    <string name="sav_menu">Save</string>
    <string name="rep_menu">Report</string>
    <string name="vie_menu">Notes</string>
    <string name="tab_menu">Table</string>
    <string name="gra_menu">Graph</string>
    <string name="ok_text">OK</string>
    <string name="cancel_text">Anuluj</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="save_text">Save</string>
    <string name="prev_text">Previous</string>
    <string name="sel_text">Select</string>
    <string name="e_fake">Function is disabled until main research is finished.</string>
    <string name="no_tasks">&lt;no tasks></string>
    <string name="no_tasks_title">Tasks base is empty</string>
    <string name="no_tasks_mess">Tasks base is empty.\n\nTask suite may be selected from "Settings" option in menu.</string>
    <string name="info_cards">Screen for researchers data edition.\n\nATTENTION. All changes, especially adding new people, should be agreed with research coordinator.</string>
    <string name="info_login">Researcher should select her/his identifier, which will be used to sign research results. \n\nIf there is no identifier on drop-down list box or associated data are invalid, they may be changed or filled in by selecting the field "Researchers" from side menu.</string>
    <string name="info_main">Menu in top-right corner provides access to application settings.\n\nIf the examinee does the research for the first time, it should use the Tutorial.\n\nBefore starting a research, you should select institution and examinee from lists. If institution or examinee are not visible on the list, data may be filled in by selecting "Add examinee" from this screen.</string>
    <string name="info_pupils">Examinees data edition screen.\n\nATTENTION. All changes, especially adding new examinees should be agreed with research coordinator. Every examinee must have unique identifier, otherwise research results would not be stored properly.</string>
    <string name="info_schools">Institutions data edition screen.\n\nATTENTION. All changes, especially adding new institutions should be agreed with research coordinator.</string>
    <string name="info_settings">Configuration files and task suite edition screen.\n\nTo select task suite to conduct research, please select the button next to "Tasks location" field and choose directory, where task suite has been placed.\n\nATTENTION. Changes of configuration files in this screen may cause abnormal behvaiour of application.</string>
    <string name="mes_wait">Please wait…</string>
    <string name="mes_abort_title">Research has been interrupted</string>
    <string name="mes_abort">Please describe reason for reseach interruption in research\'s notes.</string>
    <string name="mes_task">Select notebook with tasks</string>
    <string name="mes_badpas">Invalid password.</string>
    <string name="mes_close_ask">Do you want to quit application?</string>
    <string name="mes_bank_err">[ERROR] Not all tasks has been loaded: </string>
    <string name="mes_change">Do you want to change existing data?</string>
    <string name="mes_save_change">Do you want to save provided changes?</string>
    <string name="mes_new_id">Do you want to create a new card?</string>
    <string name="mes_enter_id">New identifier</string>
    <string name="mes_delete_id">Do you want to delete this identifier?</string>
    <string name="mes_pass_no_equ">Password in both fields is not that same</string>
    <string name="password_too_short">Password must be at least 6 characters long</string>
    <string name="login_too_short">Login must be at least 6 characters long</string>
    <string name="mes_empty">Field can not be empty</string>
    <string name="mes_exist">Selected identifier is already in use</string>
    <string name="mes_last_res">Last research has been conducted</string>
    <string name="mes_no_note">There were no notes attached to this research.</string>
    <string name="mes_bad_nam">ERROR - Invalid file name.</string>
    <string name="mes_empty_dir">Directory is empty</string>
    <string name="mes_prev_dir">Previous directory</string>
    <string name="mes_set_info">ATTENTION: Please make changes very carefully. Changes may cause abnormal behaviour of application.</string>
    <string name="mes_dir_empty">-- empty ---</string>
    <string name="mes_del_school">Do you want to remove institution?</string>
    <string name="mes_del_card">Do you want to remove researcher?</string>
    <string name="mes_del_pupil">Do you want to remove examinee?</string>
    <string name="mes_enter_new_id">Identifier</string>
    <string name="mes_enter_new_group">Department name</string>
    <string name="mes_enter_new_gender">Gender</string>
    <string name="mes_enter_new_birthday">Birth date</string>
    <string name="mes_no_data">Found no results to show</string>
    <string name="login_title">Logging in</string>
    <string name="login_mess">Before starting research please log in.</string>
    <string name="login_short_mess">Please log in.</string>
    <string name="login_no_mess">Please select an identifier from the list.</string>
    <string name="note_title">Notes for research</string>
    <string name="pass_title">Enter password</string>
    <string name="about_title">Test Umiejętności na Starcie Szkolnym</string>
    <string name="about_version">Version: </string>
    <string name="about_update">Updates: </string>
    <string name="about_signature">Task suite: </string>
    <string name="about_serial">Tablet: </string>
    <string name="err_load_data">An error occurred during data loading\n.Check if content of selected file is correct.</string>
    <string name="result_group">Department: </string>
    <string name="result_pupil">Examinee: </string>
    <string name="result_date">Research made on: </string>
    <string name="result_from">Since: </string>
    <string name="result_to">To: </string>
    <string name="result_area">Area:</string>
    <string name="result_ref">Comparison to:</string>
    <string name="result_sg_01_patt">Examinees from your institution in comparison to all [band1] got [equ1] result in scale for [area1] skill.</string>
    <string name="result_sg_23_patt">Examinees from your institution in comparison to all [band1] got [equ1] result in scale for [area1] skill.</string>
    <string name="result_st_01_patt">[equ2] [part1] examinees from your institution are on three highest skill levels required for [area2] learning. [equ3] [part2] examinees are average in this range. [equ4] [part3] examinees are on two lowest levels. Differences between percentage of examinees from your institution and [band2] in given skill level are marked by arrows.</string>
    <string name="result_st_23_patt">[equ2] [part1] examinees from your institution are on three highest skill levels required for [area2] learning. [equ3] [part2] examinees are average in this range. [equ4] [part3] examinees are on two lowest levels. Differences between percentage of examinees from your instituion and [band2] in given skill level are marked by arrows.</string>
    <string name="result_p_01_patt">Examinee has [sel1] level of mathematics skills, [sel2] level of skills required for writing learning and [sel3] level of skills required for reading learning. Results are compared to [band3].</string>
    <string name="result_p_23_patt">Examinee has [sel1] level of mathematics skills, [sel2] level of skills required for writing learning and [sel3] level of skills required for reading learning, Results are compared to [band3].</string>
    <string name="result_band1_0">examinees being five years old attending to last groups of kindergartens</string>
    <string name="result_band1_1">examinese being in reception classes in kindergartens</string>
    <string name="result_band1_2">examinees being in reception classes in primary schools</string>
    <string name="result_band1_3">examinees being in first classes in primary schools</string>
    <string name="result_band2_0">examinees begin five years old attending to last groups of kindergartens</string>
    <string name="result_band2_1">examinees being in reception classes in kindergartens</string>
    <string name="result_band2_2">examinees being in reception classes in primary schools</string>
    <string name="result_band2_3">examinees being in first classes in primary schools</string>
    <string name="result_band3_0">groups of five years old examinees being in last group of kindergarten</string>
    <string name="result_band3_1">groups of examinees from reception class in kindergarten</string>
    <string name="result_band3_2">examinees from reception class in primary school</string>
    <string name="result_band3_3">examinees from first class in primary school</string>
    <string name="result_band4_0">five years old examinees from last groups of kindergartens.</string>
    <string name="result_band4_1">examinees from reception classes in kindergartens.</string>
    <string name="result_band4_2">examinees from reception classes in schools.</string>
    <string name="result_band4_3">examinees from first class in primary school.</string>
    <string name="result_equ1_true">higher</string>
    <string name="result_equ1_false">lower</string>
    <string name="result_equ2_true"></string>
    <string name="result_equ2_false"></string>
    <string name="result_equ3_true">It is better result than usual</string>
    <string name="result_equ3_false"></string>
    <string name="result_equ4_true">Only</string>
    <string name="result_equ4_false"></string>
    <string name="result_area1_m">mathematics</string>
    <string name="result_area1_p">required for writing learning</string>
    <string name="result_area1_c">required for reading learning</string>
    <string name="result_area2_m">mathematics</string>
    <string name="action_report_bug">Report error/bug</string>
    <string name="describe_bug">Describe an error/bug in details. If it is possible, describe how to reproduce it.</string>
    <string name="bug_description">Error/bug description</string>
    <string name="email_address">E-mail address</string>
    <string name="phone_number">Phone number</string>
    <string name="action_generate_pdf">Generate PDF</string>
    <string name="action_pdf_save_to_sdcard">Save on SD card</string>
    <string name="action_pdf_send_email">Send through an e-mail</string>
    <string name="action_pdf_save_to_google_drive">Save in Google Drive</string>
    <string name="action_pdf_print_in_google_cloud_print">Print through Google Cloud Print</string>
    <string name="show_additional_test_info">show additional task details</string>
    <string name="name">Name</string>
    <string name="area">Area</string>
    <string name="mark">Mark</string>
    <string name="answer">Answer</string>
    <string name="number">Number</string>
    <string name="test_manager">Test manager</string>
    <string name="test_type">Task type</string>
    <string name="test_properties">Task properties</string>
    <string name="submit">Send</string>
    <string name="save_log">Save logs to SD card</string>
    <string name="attach_logs">Attach logs</string>
    <string name="show_correct_answers">Show correct answers</string>
    <string name="click_to_continue">Continue</string>
    <string name="successButton">Start</string>
    <string name="failureButton">Continue</string>
</resources>