<!--
  ~ This file is part of Test Platform.
  ~
  ~ Test Platform is free software; you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation; either version 2 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Test Platform is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Test Platform; if not, write to the Free Software
  ~ Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
  ~
  ~ Ten plik jest częścią Platformy Testów.
  ~
  ~ Platforma Testów jest wolnym oprogramowaniem; możesz go rozprowadzać dalej
  ~ i/lub modyfikować na warunkach Powszechnej Licencji Publicznej GNU,
  ~ wydanej przez Fundację Wolnego Oprogramowania - według wersji 2 tej
  ~ Licencji lub (według twojego wyboru) którejś z późniejszych wersji.
  ~
  ~ Niniejszy program rozpowszechniany jest z nadzieją, iż będzie on
  ~ użyteczny - jednak BEZ JAKIEJKOLWIEK GWARANCJI, nawet domyślnej
  ~ gwarancji PRZYDATNOŚCI HANDLOWEJ albo PRZYDATNOŚCI DO OKREŚLONYCH
  ~ ZASTOSOWAŃ. W celu uzyskania bliższych informacji sięgnij do
  ~ Powszechnej Licencji Publicznej GNU.
  ~
  ~ Z pewnością wraz z niniejszym programem otrzymałeś też egzemplarz
  ~ Powszechnej Licencji Publicznej GNU (GNU General Public License);
  ~ jeśli nie - napisz do Free Software Foundation, Inc., 59 Temple
  ~ Place, Fifth Floor, Boston, MA  02110-1301  USA
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="pl.edu.ibe.loremipsum.tablet.report.ReportActivity">
    <item
        android:id="@+id/action_print"
        android:icon="@drawable/pdf"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_generate_pdf">

        <menu>
            <item
                android:id="@+id/action_save_sdcard"
                android:icon="@drawable/ic_action_sd_storage"
                android:orderInCategory="100"
                android:showAsAction="ifRoom|withText"
                android:title="@string/action_pdf_save_to_sdcard" />

            <item
                android:id="@+id/action_send_email"
                android:icon="@drawable/ic_action_email"
                android:orderInCategory="100"
                android:showAsAction="ifRoom|withText"
                android:title="@string/action_pdf_send_email" />

            <item
                android:id="@+id/action_google_drive"
                android:icon="@drawable/googledrive_monochrome64"
                android:orderInCategory="100"
                android:showAsAction="ifRoom|withText"
                android:title="@string/action_pdf_save_to_google_drive" />

            <item
                android:id="@+id/action_google_cloud_print"
                android:icon="@drawable/ic_action_cloud_print"
                android:orderInCategory="100"
                android:showAsAction="ifRoom|withText"
                android:title="@string/action_pdf_print_in_google_cloud_print" />
        </menu>

    </item>

    <item
        android:id="@+id/action_report_bug"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_report_bug" />
</menu>
