<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ This file is part of Test Platform.
  ~
  ~ Test Platform is free software; you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation; either version 2 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Test Platform is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Test Platform; if not, write to the Free Software
  ~ Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
  ~
  ~ Ten plik jest częścią Platformy Testów.
  ~
  ~ Platforma Testów jest wolnym oprogramowaniem; możesz go rozprowadzać dalej
  ~ i/lub modyfikować na warunkach Powszechnej Licencji Publicznej GNU,
  ~ wydanej przez Fundację Wolnego Oprogramowania - według wersji 2 tej
  ~ Licencji lub (według twojego wyboru) którejś z późniejszych wersji.
  ~
  ~ Niniejszy program rozpowszechniany jest z nadzieją, iż będzie on
  ~ użyteczny - jednak BEZ JAKIEJKOLWIEK GWARANCJI, nawet domyślnej
  ~ gwarancji PRZYDATNOŚCI HANDLOWEJ albo PRZYDATNOŚCI DO OKREŚLONYCH
  ~ ZASTOSOWAŃ. W celu uzyskania bliższych informacji sięgnij do
  ~ Powszechnej Licencji Publicznej GNU.
  ~
  ~ Z pewnością wraz z niniejszym programem otrzymałeś też egzemplarz
  ~ Powszechnej Licencji Publicznej GNU (GNU General Public License);
  ~ jeśli nie - napisz do Free Software Foundation, Inc., 59 Temple
  ~ Place, Fifth Floor, Boston, MA  02110-1301  USA
  -->

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@android:style/Theme.Holo.Light.Dialog">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_centerInParent="true"
        android:orientation="vertical">


        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:padding="8dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:singleLine="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/describe_bug" />

        <EditText
            android:id="@+id/bug_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/bug_description"
            android:lines="4"
            android:padding="8dp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attach_logs"
            android:id="@+id/attach_log"
            android:checked="true" />


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@android:style/Theme.Holo.Light.Dialog">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@android:string/cancel"
                android:id="@+id/button_cancel"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/save_log"
                android:id="@+id/button_dump_log"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/submit"
                android:id="@+id/button_send"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>